--- a/config-client/src/main/resources/application.yml
+++ b/config-client/src/main/resources/application.yml
@@ -9,4 +9,5 @@ management:
   endpoints:
     web:
       exposure:
-        include: ['env', 'refresh'] # 엔드포인트, ex) http://localhost:9265/actuator/refresh (POST)
+        include: "*"
+#        include: ['env', 'refresh'] # 엔드포인트, ex) http://localhost:9265/actuator/refresh (POST)
