--- a/catalogs/pom.xml
+++ b/catalogs/pom.xml
@@ -111,6 +111,23 @@
         </dependency>
         <!--        //spring cloud eureka-->
 
+        <!--        expose metric by endpoint-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!--        //expose metric by endpoint-->
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
