--- a/catalogs/src/main/resources/Application.yml
+++ b/catalogs/src/main/resources/Application.yml
@@ -19,4 +19,23 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 
 logging:
-  file: /Users/cho/IdeaProjects/MSA-study/logs/catalogs.log
+  file: C:\repositories\MSA-study\logs\catalogs.log
+#  file: /Users/cho/IdeaProjects/MSA-study/logs/catalogs.log
+
+management:
+  endpoint:
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  endpoints:
+    prometheus:
+      enabled: true
+    web:
+      exposure:
+#        include: "*"
+        include: ['prometheus', 'health', 'info', 'metric']
+  metrics:
+    export:
+      prometheus:
+        enabled: true
