--- a/catalogs/pom.xml
+++ b/catalogs/pom.xml
@@ -118,6 +118,7 @@
         </dependency>
         <!--        //expose metric by endpoint-->
 
+        <!--        prometheus for metrics-->
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-core</artifactId>
@@ -127,6 +128,19 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <!--        //prometheus for metrics-->
+
+        <!--        zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+        <!--        //zipkin-->
 
     </dependencies>
 
