--- a/catalogs/src/main/resources/Application.yml
+++ b/catalogs/src/main/resources/Application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   application:
     name: catalog
-  zipkin:
-    base-url: http://localhost:9411/zipkin/
+#  zipkin:
+#    base-url: http://localhost:9411/zipkin/
 
 #Ribbon 의 listOfServers 목록은 Eureka 적용으로 불필요하여 주석처리
 
@@ -36,7 +36,7 @@ management:
     web:
       exposure:
 #        include: "*"
-        include: ['prometheus', 'health', 'info', 'metric', 'zipkin']
+        include: ['prometheus', 'health', 'info', 'metric']
   metrics:
     export:
       prometheus:
