--- a/customers/pom.xml
+++ b/customers/pom.xml
@@ -95,6 +95,22 @@
         </dependency>
         <!--        //spring cloud eureka-->
 
+        <!--        h2-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!--        //h2-->
+
+        <!--        JPA-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!--        //JPA-->
+
     </dependencies>
 
     <build>
