--- a/zuul-server/pom.xml
+++ b/zuul-server/pom.xml
@@ -60,6 +60,14 @@
             <artifactId>spring-retry</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-reactor-resilience4j -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
