--- a/customers/src/main/resources/Application.yml
+++ b/customers/src/main/resources/Application.yml
@@ -9,6 +9,11 @@ spring:
     url: jdbc:h2:tcp://localhost/./MSA-study/customer
     username: sa
     password: 1234
+  zipkin:
+    enabled: true
+    service.name: customer
+    sender.type: web
+    base-url: http://localhost:9411/zipkin/
 
 eureka:
   instance:
@@ -16,3 +21,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+logging:
+  #  file: C:\repositories\MSA-study\logs\catalogs.log
+  file: ./logs/customers.log
