--- a/customers/pom.xml
+++ b/customers/pom.xml
@@ -111,6 +111,20 @@
         </dependency>
         <!--        //JPA-->
 
+        <!--        zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
+        <!--        //zipkin-->
+
     </dependencies>
 
     <build>
